--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Retirement Fund Calculator</h1>
-        <p>計算您退休時需要的金額！</p>
+        <h1>計算您退休時需要的金額！</h1>
+        
         
         <div class="form-group">
             <label for="currentAge">當前年齡：</label>
