--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>計算您退休時需要的金額！</title>
+    <title>退休金計算器</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
