--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>計算您退休時需要的金額！</h1>
+        <h1>退休金計算器</h1>
         
         
         <div class="form-group">
